app/assets/stylesheets/instances/_instance_list.scss
.hadoop_instance_list, .instance_list {
    .instance_provider .details{
        @include list-section-heading;
        padding: 5px 10px;
        @include background-image(linear-gradient(#ebeef2, #d7dfe9));
        border-top: 1px solid #cbcbcb;
        border-bottom: 1px solid #a4a4a4;
    }

    .no_instances {
        @include secondary-text-small;
        margin: 10px;
    }

    .images {
        float: left;
    }

    img.provider {
        padding-right: 10px;
    }

    img.state, img.provider {
        vertical-align: middle;
    }

    .instance_details {
        margin-left: 60px;
    }

    .description {
        @include secondary-text-normal;
    }

    span.name{
        color: $color-text3;
    }
}

